# Malaa-task

./: README.md
App/: Backend.Dockerfile  Celery.Dockerfile  backend_entrypoint.sh  celery_entrypoint.sh  pyproject.toml  start.sh
App/investor_bulletin/api/: main.py  routes.py
App/investor_bulletin/api/controllers/: market_controllers.py  rules_controller.py
App/investor_bulletin/core/: messaging.py
App/investor_bulletin/db/migrations/: env.py
App/investor_bulletin/db/migrations/versions/: 831672f89e9f_init_models.py
App/investor_bulletin/db/models/: __init__.py  model_base.py  models.py
App/investor_bulletin/event_subscriber/: main.py
App/investor_bulletin/resources/alert_rules/: alert_rule_dal.py  alert_rule_model.py  alert_rule_schema.py  alert_rule_service.py
App/investor_bulletin/resources/alerts/: alert_dal.py  alert_model.py  alert_schema.py  alert_service.py
App/investor_bulletin/resources/market/: market_service.py
App/investor_bulletin/tests/: conftest.py  test_alert_rule_dal.py  test_api.py
App/investor_bulletin/utils/: data_seeder.py
App/investor_bulletin/worker/: celery_app.py  tasks.py
dev_setup/: docker-compose.yml  up.sh
