[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sameh khasawneh <>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
celery = "^5.3.4"
requests = "^2.31.0"
sqlalchemy = "^2.0.22"
gunicorn = "^21.2.0"
pydantic = "^2.4.2"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.3"
sqlalchemy-cockroachdb = "^2.0.2"
pika = "^1.3.2"
AMQPStorm = "^2.10.7"
kombu = "^5.3.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry>=1.6.1"]
build-backend = "poetry.masonry.api"
